test/langtools/tools/javac/valhalla/lworld-values/IllegalByValueTest2.out
IllegalByValueTest2.java:19:59: compiler.err.value.may.not.extend
IllegalByValueTest2.java:19:30: compiler.err.duplicate.annotation.missing.container: IllegalByValueTest2.Annot
2 errors
